Ensure leaderboard is always centrally aligned
- Sometimes the iframe is returned and the wrapper doesn't expand to fit its child
- This results in a 2px width and the central alignment fails
- Adding min-width of 728px fixes this issue

--- a/app/assets/stylesheets/_globalnav/_core/_ads.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_ads.sass
@@ -1,7 +1,7 @@
 // ----------------------------------------------------------------------------
-// 
+//
 // Adverts Leaderboard
-// 
+//
 // ----------------------------------------------------------------------------
 
 .ad-leaderboard
@@ -17,6 +17,7 @@
   background-color: $row-leader-ad
   border: 3px solid $row-leader-border
   position: relative
+  min-width: 728px
   &:after
     @extend %empty-abs-generated-content
     @extend %sprite-core
@@ -28,9 +29,9 @@
     top: 50%
 
 // ----------------------------------------------------------------------------
-// 
+//
 // Other ads
-// 
+//
 // ----------------------------------------------------------------------------
 
 .ad-label
@@ -54,7 +55,7 @@
 
     .tag--horizontal
       opacity: 0
-      
+
       .ie7 &, .ie8 &
         display: none
 
@@ -108,7 +109,7 @@
 .results .card
   &.card--ad
     +multiple-transitions(height 1s ease, width 1s ease)
-  
+
   &.ad-doubleMpu
     @extend %ad-doubleMpu
     z-index: 2
